# doorlockd-client

./: .gitignore  Button.py  LedUI.py  Makefile  Mifare.py  README.md  Solenoid.py  SqliteDB.py  UiLed2.py  XmlDB.py  api_doc.txt  app.py  change-is_disabled--is_enabled.txt  config-default.ini  config.example.ini  create_db.sql  doorlockd  idee.txt  keydb.example.xml  logrotate.d.doorlockd  pyproject.toml  pythonled.py  raw_events_doc.txt  systemd.doorlockd.service
_old_doorlockd/: Button.py  Makefile  UiLed2.py  (+4 more)
django-backend/: devel-hints.txt  manage.py  pyproject.toml
django-backend/apps/doorlockdb/: admin.py  adminviews.py  api.py  apps.py  factory.py  model_forms.py  models.py  test.py  urls.py  views.py
django-backend/docs/: devel-hints.txt  example-nginx.conf  todo.txt
django-backend/doorlockd_backend/: asgi.py  settings.py  urls.py  wsgi.py
django-backend/doorlockdb/: api.py  apps.py  factory.py  models.py  urls.py  views.py
django-backend/doorlockdb/migrations/: 0001_initial.py  0002_remove_accessrule_parent_accessrule_rules.py  0008_alter_key_description_alter_lock_is_enabled.py  0009_alter_lock_token.py  0010_lock_certificate_alter_lock_token.py  0011_lockcertificate_remove_lock_certificate.py  0012_lockcertificate_fingerprint.py  0013_remove_lockcertificate_fingerprint.py  0014_lock_certificate_delete_lockcertificate.py  0015_remove_lock_token_alter_lock_certificate_and_more.py
django-backend/doorlockdb/templates/: details_access.html  details_lock.html  details_person.html
django-backend/doorlockdbackend/: asgi.py  settings.py  urls.py  wsgi.py
lock-client/: README.md  app.py  config-default.ini  pyproject.toml  requirements.txt
lock-client/libs/: Events.py  Module.py  Pn532Hw.py  data_container.py  test.py
lock-client/libs/IOWrapper/: Adafruit_BBIO.py  PN532.py  __init__.py  example.py  gpiod.py  interface.py
lock-client/libs/module/: BBIO.py  Button.py  Buzzer.py  DjangoBackendRfidAuth.py  DjangoBackendRfidAuth_old.py  GPIOD.py  HbwVoordeurLogic.py  PN532.py  Solenoid.py  TestOutput.py  TestPN532.py  UILed4.py
lock-client/test/config-ideas/: config_bbb.ini  config_laptop.ini  config_rockpi-s.ini
lock-client/test/gpiod-tests/: blink.py  button.py  event.py  get.py  sig_solution_event.py
lock-client/tools/: gencert.sh
(+113 files in other folders)
